objects/EMP_Group_And_Team_Page__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Collaboration_Group_Id__c</fullName>
        <label>Collaboration Group Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Page_URL__c</fullName>
        <label>Team Page URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>EMP Group and Team Page</label>
</CustomObject>